--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BetaBOT",
+  "name": "ElyasBOT",
   "version": "1.0.0",
   "description": "bot wa yang mudah untuk digunakan",
   "main": "index.js",
@@ -39,10 +39,10 @@
   "keywords": [
     "k"
   ],
-  "author": "Abdul Muttaqin",
+  "author": "Elyas Saputra",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/benisadewa/reuzsc/issues"
+    "url": "https://github.com/elyassaputra/ELYASBOT/issues"
   },
-  "homepage": "https://github.com/benisadewa/reuzsc#readme"
+  "homepage": "https://github.com/elyassaputra/ELYASBOT#readme"
 }
